--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -14,9 +14,7 @@
     {
       "js": ["javascript/screenshotter.js"],
       "run_at": "document_start",
-      "matches": [
-        "<all_urls>"
-      ]
+      "matches": ["http://*/*", "https://*/*"]
     }
   ],
   "permissions": [
