added <all_urls> as a permission
<all_urls> is a permission as well as a matches statement - didn't realise that. Added it as a permission and it seems to have removed the exceptions so that screenshots now work consistently on new tabs

--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -18,7 +18,11 @@
     }
   ],
   "permissions": [
-    "activeTab","downloads","webNavigation", "pageCapture"
+    "activeTab",
+    "downloads",
+    "webNavigation",
+    "pageCapture",
+    "<all_urls>"    
   ],
   "manifest_version": 2
 }
