--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ chrome/observator-0-2-release.zip
 release/observator-0-2-release.zip
 release/observatron-v-0-3.zip
 release/observatron-v-0-4.zip
+release/observatron-v-0-5.zip
