--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -4,8 +4,11 @@
   "description": "The Observatron observes things in the browser",
   "background": {
     "persistent": true,
-    "scripts": ["javascript/filenames.js",
-                "javascript/background.js"]
+    "scripts": [
+                "javascript/observatron_options.js",
+                "javascript/filenames.js",
+                "javascript/background.js"
+              ]
   },
   "browser_action": {
     "default_icon": "icons/red.png",
