initial context menu prototype for log updates

--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -29,7 +29,8 @@
     "pageCapture",
     "<all_urls>",
     "storage",
-    "webRequest"
+    "webRequest",
+    "contextMenus"
     ],
   "manifest_version": 2
 }
