--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ release/observator-0-2-release.zip
 release/observatron-v-0-3.zip
 release/observatron-v-0-4.zip
 release/observatron-v-0-5.zip
+release/observatron-v-0-8.zip
