--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ release/observatron-v-0-3.zip
 release/observatron-v-0-4.zip
 release/observatron-v-0-5.zip
 release/observatron-v-0-8.zip
+release/observatron-v-0-9.zip
