--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Test Observer - The Observatron",
-  "version": "0.91",
+  "version": "0.92",
   "description": "The Observatron observes things in the browser",
   "background": {
     "persistent": true,
@@ -25,7 +25,9 @@
     "default_title": "Engage The Observatron"
   },
   "icons": {
-    "16": "icons/red.png"
+    "16": "icons/red-16x16.png",
+    "48": "icons/red-48x48.png",
+    "128": "icons/red-128x128.png"
   },
   "options_page": "options/options_page.html",
   "content_scripts": [
