uploaded 0.97 to chrome store

--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Exploratory Testing Tool - Test Observer - The Observatron",
   "version": "0.97",
-  "description": "The Exploratory Testing Observatron Tool observes things in the browser, automatically creates notes and screenshots and helps you track your testing session",
+  "description": "Observes browser actions to automatically create logs and screenshots, while you track and make notes on your testing.",
   "background": {
     "service_worker": "javascript/worker.js"
   },
